# trcaffe

./: .gitignore  .gitmodules  10_to_int8.sh  11_to_ncnn.sh  12_int8mode_test.sh  1_add_image.sh  2_getImageList.py  2_get_imagelist.py  3_get_imagelmdb.sh  4_get_imagemean.sh  5_start_train.sh  6_start_train_snapshsot.sh  7_start_train_weights.sh  8_test_image.sh  9_test_model.sh  add_image.sh  data  echarts.min.js  view-learn-rate.py  view.py
Tools/: rename.py
cpp_pretreamtment/: CMakeLists.txt  pretreamtment.cpp
cpp_test_model/: CMakeLists.txt  classification.cpp  just_make.sh  make.sh
int8_mode/: CMakeLists.txt  main.cpp
labels/: Readme.md
model_googlenet/: solver_googlenet.prototxt  train_googlenet.prototxt
model_resnet/: ResNet-50-deploy.prototxt  ResNet_101_train_val.prototxt  ResNet_152_train_val.prototxt  ResNet_18_deploy.prototxt  ResNet_18_train_val.prototxt  ResNet_50_deploy.prototxt  ResNet_50_train_val.prototxt  solver.prototxt
model_resnet_imagenet/resnet_18/: resnet_18.prototxt  resnet_18_solver.prototxt
model_resnet_imagenet/resnet_32/: resnet_32.prototxt  resnet_32_solver.prototxt
model_resnet_imagenet/resnet_50/: resnet_50.prototxt  resnet_50_deploy.prototxt  resnet_50_new.prototxt  resnet_50_solver.prototxt
model_segnet/: segnet_basic_inference.prototxt  segnet_basic_train.prototxt
model_test/: solver_test.prototxt  train_test.prototxt
model_tlc/: quan.prototxt  quan_train.prototxt  solver.prototxt  tlc.prototxt  tlc_train.prototxt
model_vgg16/: deploy_vgg16.prototxt  solver_vgg16.prototxt  train_vgg16.prototxt
